--- a/inventory.ini
+++ b/inventory.ini
@@ -2,6 +2,17 @@
 [web]
 172.31.17.39
 
+[web:vars]
+DB_URL="http://db.daws78s.online"
+
+[localhost]
+localhost
+
+[localhost:vars]
+Course="DevOps with AWS"
+Trainer="Sivakumar"
+Duration="120hrs"
+
 [db]
 172.31.16.152
 
