--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -3,4 +3,4 @@
   tasks:
   - name: print information
     ansible.builtin.debug:
-      msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}."
+      msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}. Timings are: {{timings}}"
