--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -2,5 +2,7 @@
   hosts: localhost
   tasks:
   - name: print information
+    vars:
+      timings: "07:15AM IST"
     ansible.builtin.debug:
       msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}. Timings are: {{timings}}"
