--- a/inventory.ini
+++ b/inventory.ini
@@ -12,6 +12,7 @@ localhost
 Course="DevOps with AWS"
 Trainer="Sivakumar"
 Duration="120hrs"
+WISHES="Morning from inventory"
 
 [db]
 172.31.16.152
