--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -6,7 +6,7 @@
   - vars.yaml
   vars_prompt:
   - name: WISHES
-    prompt: Please enter WISHES
+    prompt: Please enter Wishes
     private: false
   tasks:
   - name: check preference
