--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -10,7 +10,10 @@
     private: false
   tasks:
   - name: check preference
-    vars:
-      WISHES: "Morning from TASK variable"
+    # vars:
+    #   WISHES: "Morning from TASK variable"
     ansible.builtin.debug:
       msg: "Hello, Good {{WISHES}}"
+
+# 1. arguments
+# 2. Task level
