--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -4,10 +4,10 @@
     WISHES: "Morning from PLAY variable"
   vars_files:
   - vars.yaml
-  vars_prompt:
-  - name: WISHES
-    prompt: Please enter Wishes
-    private: false
+  # vars_prompt:
+  # - name: WISHES
+  #   prompt: Please enter Wishes
+  #   private: false
   tasks:
   - name: check preference
     # vars:
@@ -18,3 +18,4 @@
 # 1. arguments
 # 2. Task level
 # 3. variable files
+# 4. Prompt
