--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -1,6 +1,6 @@
 - name: check number
   hosts: localhost
-  vars_prompt:
+  vars_prompt: #prompts are always considered as text/string
   - name: number
     prompt: please enter number
     private: no
@@ -8,9 +8,9 @@
   - name: number is less than 10
     ansible.builtin.debug:
       msg: "Given number {{number}} is less than 10"
-    when: number < 10
+    when: number | int < 10
 
   - name: number is greater than or equal to 10
     ansible.builtin.debug:
-      msg: "Given number {{number}} is less than 10"
-    when: number >= 10
+      msg: "Given number {{number}} is greater than or equal to 10"
+    when: number | int >= 10
