--- a/inventory.ini
+++ b/inventory.ini
@@ -9,9 +9,9 @@ DB_URL="http://db.daws78s.online"
 localhost
 
 [localhost:vars]
-Course="DevOps with AWS"
-Trainer="Sivakumar"
-Duration="120hrs"
+#Course="DevOps with AWS"
+#Trainer="Sivakumar"
+#Duration="120hrs"
 #WISHES="Morning from inventory"
 
 [db]
