--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -22,3 +22,11 @@
   - name: convert into lowercase
     ansible.builtin.debug:
       msg: "{{ greeting | lower }}"
+
+- name: remove duplicates
+  hosts: localhost
+  numbers: [1, 2, 3, 3, 4, 4, 5]
+  tasks:
+  - name: remove duplicates
+    ansible.builtin.debug:
+      msg: "{{ numbers | unique }}"
