--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -54,4 +54,4 @@
       msg: "Before convert: {{ my_dict }}"
   - name: after convert
     ansible.builtin.debug:
-      msf: "After convert: {{ my_dict | dict2items }}"
+      msg: "After convert: {{ my_dict | dict2items }}"
