--- a/18-command-vs-shell.yaml
+++ b/18-command-vs-shell.yaml
@@ -6,3 +6,6 @@
 
   - name: shell module
     ansible.builtin.shell: "echo 'Hi, this is from shell module' > /tmp/shell.txt "
+
+    # simple commands without the need of shell variables, envrironment and features like redirections, pipes, & go for command module.
+    # If we need to run complex commands or scripts go for shell module.
