--- a/18-command-vs-shell.yaml
+++ b/18-command-vs-shell.yaml
@@ -9,3 +9,5 @@
 
     # simple commands without the need of shell variables, envrironment and features like redirections, pipes, & go for command module.
     # If we need to run complex commands or scripts go for shell module.
+    # Whatever works in command module, it will work in shell module, but vice versa is not true.
+    
